# sympyny

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
sympyny/: __init__.py  audio_io.py  defaults.py  instruments.py  main.py  sympyny.py
