[tool.poetry]
name = "sympyny"
version = "0.1.0"
description = ""
authors = ["Anonymous4045 <99518880+Anonymous4045@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.9.2"
simpleaudio = "^1.0.4"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
